--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@trpc/server": "^10.26.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "lucide-react": "^0.248.0",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
