--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
     "next-themes": "^0.2.1",
+    "nextjs-toploader": "^1.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.0",
     "react-hot-toast": "^2.4.1",
-    "react-markdown": "^8.0.7",
     "superjson": "1.12.2",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
