--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@radix-ui/react-collapsible": "^1.0.3",
     "@radix-ui/react-dropdown-menu": "^2.0.5",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-popover": "^1.0.6",
     "@radix-ui/react-select": "^1.2.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.4",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@t3-oss/env-nextjs": "^0.3.1",
     "@tanstack/react-query": "^4.29.7",
@@ -27,6 +29,7 @@
     "@trpc/server": "^10.26.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
+    "date-fns": "^2.30.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "lucide-react": "^0.248.0",
     "next": "^13.4.2",
@@ -34,9 +37,9 @@
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.4.2",
     "react": "18.2.0",
+    "react-day-picker": "^8.8.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.0",
-    "react-hot-toast": "^2.4.1",
     "superjson": "1.12.2",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
