--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@adobe/pdfservices-node-sdk": "^3.4.1",
     "@hookform/resolvers": "^3.1.1",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.14.0",
@@ -27,10 +28,12 @@
     "@trpc/next": "^10.26.0",
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
+    "adm-zip": "^0.5.10",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "fs": "^0.0.1-security",
     "lucide-react": "^0.248.0",
     "next": "^13.4.2",
     "next-auth": "^4.22.1",
@@ -46,6 +49,7 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@types/adobe__pdfservices-node-sdk": "^2.2.0",
     "@types/eslint": "^8.37.0",
     "@types/node": "^18.16.0",
     "@types/prettier": "^2.7.2",
