--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@adobe/pdfservices-node-sdk": "^3.4.1",
     "@hookform/resolvers": "^3.1.1",
     "@next-auth/prisma-adapter": "^1.0.5",
     "@prisma/client": "^4.14.0",
@@ -28,7 +27,7 @@
     "@trpc/next": "^10.26.0",
     "@trpc/react-query": "^10.26.0",
     "@trpc/server": "^10.26.0",
-    "adm-zip": "^0.5.10",
+    "@uploadthing/react": "^5.2.0",
     "class-variance-authority": "^0.6.0",
     "clsx": "^1.2.1",
     "date-fns": "^2.30.0",
@@ -42,14 +41,15 @@
     "react": "18.2.0",
     "react-day-picker": "^8.8.0",
     "react-dom": "18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.45.0",
     "superjson": "1.12.2",
     "tailwind-merge": "^1.13.2",
     "tailwindcss-animate": "^1.0.6",
+    "uploadthing": "^5.2.1",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@types/adobe__pdfservices-node-sdk": "^2.2.0",
     "@types/eslint": "^8.37.0",
     "@types/node": "^18.16.0",
     "@types/prettier": "^2.7.2",
