--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next-themes": "^0.2.1",
     "nextjs-toploader": "^1.4.2",
     "react": "18.2.0",
+    "react-csv": "^2.2.2",
     "react-day-picker": "^8.8.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
@@ -57,6 +58,7 @@
     "@types/node": "^18.16.0",
     "@types/prettier": "^2.7.2",
     "@types/react": "^18.2.6",
+    "@types/react-csv": "^1.1.10",
     "@types/react-dom": "^18.2.4",
     "@typescript-eslint/eslint-plugin": "^5.59.6",
     "@typescript-eslint/parser": "^5.59.6",
